[package]
name = "lib_so"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
customizable-buddy = "0.0.2"
riscv = "0.8.0"
spin = { version = "0.9", features = ["use_ticket_mutex"] }
syscall = { path = "../syscall" }
buddy_system_allocator = "0.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bit_field = "0.9.0"
xmas-elf = "0.7.0"
log = "0.4"

vdso_macro ={ path = "./vdso_macro"}

[features]
inner = []
kernel = []
