[package]
name = "unifi-sche"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
customizable-buddy = "0.0.2"
riscv = "0.8.0"
unifi-exposure ={ path = "../unifi-exposure"}
spin = { version = "0.9", features = ["use_ticket_mutex"] }
syscall = { path = "../syscall" }
buddy_system_allocator = "0.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
